[gd_scene load_steps=6 format=3 uid="uid://imi832s1yq1x"]

[ext_resource type="Script" uid="uid://lnvx7s6vj3m0" path="res://scenes/game_over/game_over.gd" id="1_anb0t"]
[ext_resource type="FontFile" uid="uid://cxaq1lpo2t7ho" path="res://fonts/black_charcoal.TTF" id="2_vtso4"]
[ext_resource type="FontFile" uid="uid://cm40i6mvl1t3e" path="res://fonts/snake_business.ttf" id="3_p1tbv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqjl0"]
bg_color = Color(0.714734, 0.581304, 0.271327, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.423529, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 150
corner_radius_bottom_right = 5
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mpp1"]
bg_color = Color(0.714734, 0.581304, 0.271327, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.423529, 0.105882, 1)
corner_radius_top_left = 150
corner_radius_top_right = 5
corner_radius_bottom_right = 150
corner_radius_bottom_left = 5

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anb0t")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.14902, 0, 0.823529)

[node name="GameOverLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -241.0
offset_top = 43.0
offset_right = 241.0
offset_bottom = 169.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_vtso4")
theme_override_font_sizes/font_size = 100
text = "Game Over"

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -111.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="RetryButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_p1tbv")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mpp1")
text = "(Retry)"

[node name="BackButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_p1tbv")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mpp1")
text = "(level select)"

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -44.5
offset_right = 86.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_vtso4")
theme_override_font_sizes/font_size = 70
text = "Score"

[node name="HighScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 49.0
offset_right = 86.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_vtso4")
theme_override_font_sizes/font_size = 70
text = "New High Score!"

[connection signal="pressed" from="ButtonContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
